--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "jsdom": "^25.0.0"
+    "jsdom": "^25.0.0",
+    "node-fetch": "^2.7.0"
   }
 }
